further factored out modules from aggregat.c

--- a/babyphone/babyphone/Debug/Makefile
+++ b/babyphone/babyphone/Debug/Makefile
@@ -86,7 +86,8 @@ SUBDIRS :=  \
 ../src/ASF/thirdparty/CMSIS/Lib/ \
 ../src/ASF/thirdparty/CMSIS/Lib/GCC/ \
 ../src/config/ \
-../src/modules
+../src/modules \
+../src/includes
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
@@ -98,9 +99,11 @@ C_SRCS +=  \
 ../src/ASF/common/services/delay/sam/cycle_counter.c \
 ../src/ASF/sam/drivers/tc/tc.c \
 ../src/ASF/sam/drivers/uart/uart.c \
-../src/modules/aggregat.c \
+../src/modules/ADC.c \
+../src/modules/PID.c \
 ../src/modules/ppm_capture.c \
 ../src/modules/ppm_out.c \
+../src/modules/PWM.c \
 ../src/modules/record_playback.c \
 ../src/modules/utils.c \
 ../src/ASF/common/services/clock/sam3x/sysclk.c \
@@ -131,9 +134,11 @@ src/ASF/common/services/serial/usart_serial.o \
 src/ASF/common/services/delay/sam/cycle_counter.o \
 src/ASF/sam/drivers/tc/tc.o \
 src/ASF/sam/drivers/uart/uart.o \
-src/modules/aggregat.o \
+src/modules/ADC.o \
+src/modules/PID.o \
 src/modules/ppm_capture.o \
 src/modules/ppm_out.o \
+src/modules/PWM.o \
 src/modules/record_playback.o \
 src/modules/utils.o \
 src/ASF/common/services/clock/sam3x/sysclk.o \
@@ -157,9 +162,11 @@ src/ASF/common/services/serial/usart_serial.o \
 src/ASF/common/services/delay/sam/cycle_counter.o \
 src/ASF/sam/drivers/tc/tc.o \
 src/ASF/sam/drivers/uart/uart.o \
-src/modules/aggregat.o \
+src/modules/ADC.o \
+src/modules/PID.o \
 src/modules/ppm_capture.o \
 src/modules/ppm_out.o \
+src/modules/PWM.o \
 src/modules/record_playback.o \
 src/modules/utils.o \
 src/ASF/common/services/clock/sam3x/sysclk.o \
@@ -183,9 +190,11 @@ src/ASF/common/services/serial/usart_serial.d \
 src/ASF/common/services/delay/sam/cycle_counter.d \
 src/ASF/sam/drivers/tc/tc.d \
 src/ASF/sam/drivers/uart/uart.d \
-src/modules/aggregat.d \
+src/modules/ADC.d \
+src/modules/PID.d \
 src/modules/ppm_capture.d \
 src/modules/ppm_out.d \
+src/modules/PWM.d \
 src/modules/record_playback.d \
 src/modules/utils.d \
 src/ASF/common/services/clock/sam3x/sysclk.d \
@@ -209,9 +218,11 @@ src/ASF/common/services/serial/usart_serial.d \
 src/ASF/common/services/delay/sam/cycle_counter.d \
 src/ASF/sam/drivers/tc/tc.d \
 src/ASF/sam/drivers/uart/uart.d \
-src/modules/aggregat.d \
+src/modules/ADC.d \
+src/modules/PID.d \
 src/modules/ppm_capture.d \
 src/modules/ppm_out.d \
+src/modules/PWM.d \
 src/modules/record_playback.d \
 src/modules/utils.d \
 src/ASF/common/services/clock/sam3x/sysclk.d \
@@ -242,6 +253,10 @@ LINKER_SCRIPT_DEP+=  \
 
 
 # AVR32/GNU C Compiler
+
+
+
+
 
 
 
