Revert "removed files to reduce complexity for easier NVIC prio analysis"
This reverts commit fccd6a06e9e26d232d601e4a6fa01c966cb6a9bf.

--- a/babyphone/babyphone/Debug/Makefile
+++ b/babyphone/babyphone/Debug/Makefile
@@ -101,7 +101,10 @@ C_SRCS +=  \
 ../src/ASF/sam/drivers/uart/uart.c \
 ../src/modules/ADC.c \
 ../src/modules/PID.c \
+../src/modules/ppm_capture.c \
+../src/modules/ppm_out.c \
 ../src/modules/PWM.c \
+../src/modules/record_playback.c \
 ../src/modules/utils.c \
 ../src/ASF/common/services/clock/sam3x/sysclk.c \
 ../src/ASF/common/utils/interrupt/interrupt_sam_nvic.c \
@@ -133,7 +136,10 @@ src/ASF/sam/drivers/tc/tc.o \
 src/ASF/sam/drivers/uart/uart.o \
 src/modules/ADC.o \
 src/modules/PID.o \
+src/modules/ppm_capture.o \
+src/modules/ppm_out.o \
 src/modules/PWM.o \
+src/modules/record_playback.o \
 src/modules/utils.o \
 src/ASF/common/services/clock/sam3x/sysclk.o \
 src/ASF/common/utils/interrupt/interrupt_sam_nvic.o \
@@ -158,7 +164,10 @@ src/ASF/sam/drivers/tc/tc.o \
 src/ASF/sam/drivers/uart/uart.o \
 src/modules/ADC.o \
 src/modules/PID.o \
+src/modules/ppm_capture.o \
+src/modules/ppm_out.o \
 src/modules/PWM.o \
+src/modules/record_playback.o \
 src/modules/utils.o \
 src/ASF/common/services/clock/sam3x/sysclk.o \
 src/ASF/common/utils/interrupt/interrupt_sam_nvic.o \
@@ -183,7 +192,10 @@ src/ASF/sam/drivers/tc/tc.d \
 src/ASF/sam/drivers/uart/uart.d \
 src/modules/ADC.d \
 src/modules/PID.d \
+src/modules/ppm_capture.d \
+src/modules/ppm_out.d \
 src/modules/PWM.d \
+src/modules/record_playback.d \
 src/modules/utils.d \
 src/ASF/common/services/clock/sam3x/sysclk.d \
 src/ASF/common/utils/interrupt/interrupt_sam_nvic.d \
@@ -208,7 +220,10 @@ src/ASF/sam/drivers/tc/tc.d \
 src/ASF/sam/drivers/uart/uart.d \
 src/modules/ADC.d \
 src/modules/PID.d \
+src/modules/ppm_capture.d \
+src/modules/ppm_out.d \
 src/modules/PWM.d \
+src/modules/record_playback.d \
 src/modules/utils.d \
 src/ASF/common/services/clock/sam3x/sysclk.d \
 src/ASF/common/utils/interrupt/interrupt_sam_nvic.d \
@@ -238,6 +253,12 @@ LINKER_SCRIPT_DEP+=  \
 
 
 # AVR32/GNU C Compiler
+
+
+
+
+
+
 
 
 
